--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
     "@angular/platform-browser": "^2.4.10",
     "@angular/platform-browser-dynamic": "^2.4.10",
     "@types/bcrypt": "^1.0.0",
+    "@types/bootstrap": "^3.3.34",
     "@types/electron": "^1.6.10",
+    "@types/jquery": "^3.2.5",
     "bcrypt": "^1.0.2",
+    "bootstrap": "^3.3.7",
     "electron-compile": "^6.4.1",
     "electron-devtools-installer": "^2.2.0",
+    "jquery": "^3.2.1",
     "reflect-metadata": "^0.1.10",
     "tslib": "^1.7.1",
     "zone.js": "^0.7.8"
