--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@angular/common": "^2.4.10",
     "@angular/compiler": "^2.4.10",
     "@angular/core": "^2.4.10",
+    "@angular/forms": "^4.2.5",
+    "@angular/http": "^4.2.5",
     "@angular/platform-browser": "^2.4.10",
     "@angular/platform-browser-dynamic": "^2.4.10",
     "@types/bcrypt": "^1.0.0",
